color template section

--- a/index.html
+++ b/index.html
@@ -45,22 +45,81 @@
                     <label class="label">По батькові</label>
                     <input type="text" class="input" placeholder="По батькові Усоблого">
                 </div>
-                <div class="input__wrapper creation-main__date-wrap">
+                <div class="input__wrapper creation-main__date-wrap mb-0">
                     <div class="creation-main__date">
-                        <div class="input__wrapper">
+                        <div class="input__wrapper mb-0">
                             <label class="label">Дата народження</label>
-                            <input type="date" class="input">
+                            <input data-type="date" type="text" class="input">
                         </div>
                     </div>
                     <div class="creation-main__date">
-                        <div class="input__wrapper">
+                        <div class="input__wrapper mb-0">
                             <label class="label">Дата смерті</label>
-                            <input type="date" class="input">
+                            <input data-type="date" type="text" class="input">
                         </div>
+                    </div>
+                </div>
+            </section>
+            <section class="creation-page__section creation-template">
+                <h2 class="title creation-page__section-title">Колiрний шаблон</h2>
+                <div class="creation-template__wrap">
+                    <div class="creation-template__item">
+                        <div class="creation-template__hero">
+                            <img src="./assets/color-templates/1.svg" alt="template1">
+                            <div class="creation-template__info">
+                                <h4>Бiографiя</h4>
+                                <p class="text">
+                                    В Україні Ігор Сікорський відомий зараз як геніальний авіаційний конструктор, «батько світового гелікоптеробудування». Значно менше знають на Батьківщині про його релігійно-філософську творчість. 
+                                </p>
+                            </div>
+                        </div>
+                        <input checked type="radio" name="template-radio" class="creation-template__radio">
+                        <p class="text creation-template__name">Класичний</p>
+                    </div>
+                    <div class="creation-template__item">
+                        <div class="creation-template__hero">
+                            <img src="./assets/color-templates/2.svg" alt="template1">
+                            <div class="creation-template__info">
+                                <h4>Бiографiя</h4>
+                                <p class="text">
+                                    В Україні Ігор Сікорський відомий зараз як геніальний авіаційний конструктор, «батько світового гелікоптеробудування». Значно менше знають на Батьківщині про його релігійно-філософську творчість. 
+                                </p>
+                            </div>
+                        </div>
+                        <input type="radio" name="template-radio" class="creation-template__radio">
+                        <p class="text creation-template__name">Чорний</p>
+                    </div>
+                    <div class="creation-template__item">
+                        <div class="creation-template__hero">
+                            <img src="./assets/color-templates/3.svg" alt="template1">
+                            <div class="creation-template__info">
+                                <h4>Бiографiя</h4>
+                                <p class="text">
+                                    В Україні Ігор Сікорський відомий зараз як геніальний авіаційний конструктор, «батько світового гелікоптеробудування». Значно менше знають на Батьківщині про його релігійно-філософську творчість. 
+                                </p>
+                            </div>
+                        </div>
+                        <input type="radio" name="template-radio" class="creation-template__radio">
+                        <p class="text creation-template__name">Червоний</p>
+                    </div>
+                    <div class="creation-template__item">
+                        <div class="creation-template__hero">
+                            <img src="./assets/color-templates/4.svg" alt="template1">
+                            <div class="creation-template__info">
+                                <h4>Бiографiя</h4>
+                                <p class="text">
+                                    В Україні Ігор Сікорський відомий зараз як геніальний авіаційний конструктор, «батько світового гелікоптеробудування». Значно менше знають на Батьківщині про його релігійно-філософську творчість. 
+                                </p>
+                            </div>
+                        </div>
+                        <input type="radio" name="template-radio" class="creation-template__radio">
+                        <p class="text creation-template__name">Блакитний</p>
                     </div>
                 </div>
             </section>
         </div>
     </main>
+    <script src="./script/imask.js"></script>
+    <script src="./script/main.js"></script>
 </body>
 </html>
