--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <main class="creation-page">
         <div class="container">
             <h1 class="title creation-page__title">Створення <br> сторiнки пам'ятi</h1>
+            <!-- Головна iнформацiя -->
             <section class="creation-page__section creation-main">
                 <h2 class="title creation-page__section-title">Головна iнформацiя</h2>
                 <p class="text creation-page__text creation-main__text">
@@ -60,6 +61,7 @@
                     </div>
                 </div>
             </section>
+            <!-- Колiрний шаблон -->
             <section class="creation-page__section creation-template">
                 <h2 class="title creation-page__section-title">Колiрний шаблон</h2>
                 <div class="creation-template__wrap">
@@ -115,6 +117,21 @@
                         <input type="radio" name="template-radio" class="creation-template__radio">
                         <p class="text creation-template__name">Блакитний</p>
                     </div>
+                </div>
+            </section>
+            <!-- Єпітафія -->
+            <section class="creation-page__section creation-epitaph">
+                <h2 class="title creation-page__section-title">Єпітафія</h2>
+                <p class="text creation-epitaph__text">
+                    Епітафія це невеликий поминальний напис. Головні слова, які характеризують людину і нагадують про найсвітліші моменти життя
+                </p>
+                <div class="input__wrapper">
+                    <label class="label">Єпітафія</label>
+                    <textarea cols="30" rows="10" class="input" placeholder="Єпітафія"></textarea>
+                </div>
+                <div class="input__wrapper mb-0">
+                    <label class="label">Ім'я автора єпітафії</label>
+                    <input type="text" class="input" placeholder="Ім'я автора">
                 </div>
             </section>
         </div>
