memories and refs sections

--- a/index.html
+++ b/index.html
@@ -171,6 +171,51 @@
                     </button>
                 </div>
             </section>
+            <!-- Посилання -->
+            <section class="creation-page__section creation-refs">
+                <h2 class="title creation-page__section-title">Посилання</h2>
+                <p class="text creation-refs__text">
+                    Додайте посилання на соціальні мережі, блоги, згадки у ЗМІ та іншу інформацію про людину, яка зберігається в інтернеті
+                </p>
+                <p class="creation-refs__ads-text">Доступно лише у пакетах “Оптимальний” та “Розширений”</p>
+                <div class="input__wrapper">
+                    <label class="label">Посилання</label>
+                    <input type="text" class="input" placeholder="Посилання">
+                </div>
+                <div class="input__wrapper">
+                    <label class="label">Назва посилання</label>
+                    <input type="text" class="input" placeholder="Назва посилання">
+                </div>
+                <button class="btn creation-refs__btn">
+                    <img src="./assets/plus.svg" alt="+">  
+                    Додадти ще
+                </button>
+            </section>
+
+
+            <!-- Спогади рiдних та друзiв -->
+            <section class="creation-page__section creation-memories">
+                <h2 class="title creation-page__section-title">Спогади рiдних та друзiв</h2>
+                <p class="text creation-memories__text">
+                    Напишіть спогад про померлого. Також ви можете додати спогади друзів. Для цього вам потрібно буде надіслати їм посилання на Сторінку пам'яті
+                </p>
+                <div class="input__wrapper">
+                    <label class="label">Спогад</label>
+                    <textarea cols="30" rows="10" class="input" placeholder="Спогад"></textarea>
+                </div>
+                <div class="creation-memories__add-text">
+                    <img src="./assets/plus.svg" alt="+">
+                    <span>Додадти фото чи відео</span>
+                </div>
+                <div class="input__wrapper mb-0">
+                    <label class="label">Ім'я автора</label>
+                    <input type="text" class="input" placeholder="Ім'я автора">
+                </div>
+                <button class="btn creation-memories__btn">
+                    <img src="./assets/plus.svg" alt="+">  
+                    Додадти ще
+                </button>
+            </section>
         </div>
     </main>
     <script src="./script/imask.js"></script>
