--- a/index.html
+++ b/index.html
@@ -191,7 +191,41 @@
                     Додадти ще
                 </button>
             </section>
-
+            <!-- Як знайти поховання -->
+            <section class="creation-page__section creation-find">
+                <h2 class="title creation-page__section-title">Як знайти поховання</h2>
+                <p class="text creation-find__text">
+                    Допоможіть друзям і близьким знайти його поховання.
+                </p>
+                <div class="input__wrapper">
+                    <label class="label">Адреса кладовища</label>
+                    <input type="text" class="input" placeholder="Адреса">
+                </div>
+                <div class="input__wrapper mb-0">
+                    <label class="label">Детальне розташування на цвинтарі (секція, ряд)</label>
+                    <input type="text" class="input" placeholder="секція, ряд">
+                </div>
+                <img src="./assets/cemetary.png" alt="кладовище" class="creation-find__map">
+                <p class="text creation-find__text mb-0">Точні координати</p>
+                <div class="creation-find__coords-wrap">
+                    <div class="creation-find__coord">
+                        <label class="label">Довгота</label>
+                        <input type="text" class="input" placeholder="Довгота">
+                    </div>
+                    <div class="creation-find__coord">
+                        <label class="label">Широта</label>
+                        <input type="text" class="input" placeholder="Широта">
+                    </div>
+                </div>
+                <div class="creation-find__help">
+                    <img src="./assets/icons/help.svg" alt="?">
+                    <p>Як дізнатися точні координати?</p>
+                </div>
+                <div class="input__wrapper mb-0">
+                    <label class="label">Докладно опишіть, як знайти поховання</label>
+                    <textarea cols="30" rows="10" class="input" placeholder="Як знайти поховання"></textarea>
+                </div>
+            </section>
 
             <!-- Спогади рiдних та друзiв -->
             <section class="creation-page__section creation-memories">
