--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style/style.min.css">
     <title>Inheart</title>
 </head>
-<body>
+<body class="bg-light-blue">
     <header class="header">
         <div class="header__wrapper">
             <img src="./assets/logo.svg" alt="Inheart" class="header__logo">
@@ -226,7 +226,6 @@
                     <textarea cols="30" rows="10" class="input" placeholder="Як знайти поховання"></textarea>
                 </div>
             </section>
-
             <!-- Спогади рiдних та друзiв -->
             <section class="creation-page__section creation-memories">
                 <h2 class="title creation-page__section-title">Спогади рiдних та друзiв</h2>
@@ -250,6 +249,11 @@
                     Додадти ще
                 </button>
             </section>
+
+            <div class="creation-page__btns">
+                <button class="btn">Передпрогляд</button>
+                <button class="btn creation-page__publish">Опублікувати</button>
+            </div>
         </div>
     </main>
     <script src="./script/imask.js"></script>
