--- a/index.html
+++ b/index.html
@@ -256,6 +256,46 @@
             </div>
         </div>
     </main>
+    <footer class="footer">
+        <div class="footer__hero">
+            <nav class="footer__nav">
+                <img src="./assets/footer-logo.svg" alt="Inheart" class="footer__logo">
+                <ul class="footer__menu">
+                    <li class="footer__menu-item">
+                        <a href="">About</a>
+                    </li>
+                    <li class="footer__menu-item">
+                        <a href="">News</a>
+                    </li>
+                    <li class="footer__menu-item">
+                        <a href="">For press</a>
+                    </li>
+                    <li class="footer__menu-item">
+                        <a href="">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+            <ul class="footer__socials">
+                <li>
+                    <a href=""><img src="./assets/socials/youtube.svg" alt="YT" class="footer__social"></a>
+                </li>
+                <li>
+                    <a href=""><img src="./assets/socials/in.svg" alt="in" class="footer__social"></a>
+                </li>
+                <li>
+                    <a href=""><img src="./assets/socials/twiter.svg" alt="twiter" class="footer__social"></a>
+                </li>
+                <li>
+                    <a href=""><img src="./assets/socials/fb.svg" alt="fb" class="footer__social"></a>
+                </li>
+            </ul>
+        </div>
+        <div class="footer__copyright">
+            <span>© Inheart 2022. All rights reserved.</span>
+            <a href="">Cookie Policy</a>
+            <a href="">Privacy Policy</a>
+        </div>
+    </footer>
     <script src="./script/imask.js"></script>
     <script src="./script/main.js"></script>
 </body>
