--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </p>
                 <div class="creation-main__photo">
                     <div class="creation-main__photo-empty">
-                        <img src="./assets/camera-icon.svg" alt="camera">
+                        <img src="./assets/icons/camera-icon.svg" alt="camera">
                         <p class="text">Завантажити</p>
                     </div>
                 </div>
@@ -166,7 +166,7 @@
                     <input type="text" class="input" placeholder="Посилання на відео">
                     <p class="text">або</p>
                     <button class="btn creation-media__attachment">
-                        <img src="./assets/attachment.svg">
+                        <img src="./assets/icons/attachment.svg">
                         Завантажити відео з комп'ютера
                     </button>
                 </div>
@@ -187,7 +187,7 @@
                     <input type="text" class="input" placeholder="Назва посилання">
                 </div>
                 <button class="btn creation-refs__btn">
-                    <img src="./assets/plus.svg" alt="+">  
+                    <img src="./assets/icons/plus.svg" alt="+">  
                     Додадти ще
                 </button>
             </section>
@@ -206,7 +206,7 @@
                     <input type="text" class="input" placeholder="секція, ряд">
                 </div>
                 <img src="./assets/cemetary.png" alt="кладовище" class="creation-find__map">
-                <p class="text creation-find__text mb-0">Точні координати</p>
+                <p class="text creation-find__subtext">Точні координати</p>
                 <div class="creation-find__coords-wrap">
                     <div class="creation-find__coord">
                         <label class="label">Довгота</label>
@@ -221,6 +221,7 @@
                     <img src="./assets/icons/help.svg" alt="?">
                     <p>Як дізнатися точні координати?</p>
                 </div>
+                <p class="text creation-find__subtext">Як знайти поховання?</p>
                 <div class="input__wrapper mb-0">
                     <label class="label">Докладно опишіть, як знайти поховання</label>
                     <textarea cols="30" rows="10" class="input" placeholder="Як знайти поховання"></textarea>
@@ -237,7 +238,7 @@
                     <textarea cols="30" rows="10" class="input" placeholder="Спогад"></textarea>
                 </div>
                 <div class="creation-memories__add-text">
-                    <img src="./assets/plus.svg" alt="+">
+                    <img src="./assets/icons/plus.svg" alt="+">
                     <span>Додадти фото чи відео</span>
                 </div>
                 <div class="input__wrapper mb-0">
@@ -245,7 +246,7 @@
                     <input type="text" class="input" placeholder="Ім'я автора">
                 </div>
                 <button class="btn creation-memories__btn">
-                    <img src="./assets/plus.svg" alt="+">  
+                    <img src="./assets/icons/plus.svg" alt="+">  
                     Додадти ще
                 </button>
             </section>
