btn hover added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="header__wrapper">
             <img src="./assets/logo.svg" alt="Inheart" class="header__logo">
-            <input type="button" value="Зберегти та Закрити" class="btn header__btn">
+            <input type="button" value="Зберегти та Закрити" class="btn creation-btn header__btn">
         </div>
     </header>
     <main class="creation-page">
@@ -252,7 +252,7 @@
             </section>
 
             <div class="creation-page__btns">
-                <button class="btn">Передпрогляд</button>
+                <button class="btn creation-btn">Передпрогляд</button>
                 <button class="btn creation-page__publish">Опублікувати</button>
             </div>
         </div>
