edits & margins edits

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1 class="title creation-page__title">Створення <br> сторiнки пам'ятi</h1>
             <!-- Головна iнформацiя -->
             <section class="creation-page__section creation-main">
-                <h2 class="title creation-page__section-title">Головна iнформацiя</h2>
+                <h2 class="title creation-page__section-title creation-main__title">Головна iнформацiя</h2>
                 <p class="text creation-page__text creation-main__text">
                     Пам'ятна фотографія
                 </p>
@@ -63,7 +63,7 @@
             </section>
             <!-- Колiрний шаблон -->
             <section class="creation-page__section creation-template">
-                <h2 class="title creation-page__section-title">Колiрний шаблон</h2>
+                <h2 class="title creation-page__section-title creation-main__title">Колiрний шаблон</h2>
                 <div class="creation-template__wrap">
                     <div class="creation-template__item">
                         <div class="creation-template__hero">
@@ -239,7 +239,7 @@
                 </div>
                 <div class="creation-memories__add-text">
                     <img src="./assets/icons/plus.svg" alt="+">
-                    <span>Додадти фото чи відео</span>
+                    <span>Додати фото чи відео</span>
                 </div>
                 <div class="input__wrapper mb-0">
                     <label class="label">Ім'я автора</label>
