--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                 </p>
                 <div class="creation-main__photo">
                     <div class="creation-main__photo-empty">
-                        <img src="./assets/icons/camera-icon.svg" alt="camera">
+                        <svg width="22" height="18" viewBox="0 0 22 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M5.93702 2.84538C6.00787 2.74688 6.08656 2.62631 6.18689 2.46372C6.22356 2.40431 6.32355 2.23934 6.39799 2.11653L6.4818 1.97841C7.31079 0.622387 7.91339 0 9 0H14V2H9C8.91327 2 8.6405 2.28172 8.1882 3.02159L8.11542 3.14154L8.11524 3.14183C8.04019 3.26566 7.93096 3.44589 7.88887 3.51409C7.76592 3.71332 7.66375 3.86988 7.56061 4.01326C7.11237 4.63641 6.66434 5 6 5H3C2.44772 5 2 5.44772 2 6V15C2 15.5523 2.44772 16 3 16H19C19.5523 16 20 15.5523 20 15V9H22V15C22 16.6569 20.6569 18 19 18H3C1.34315 18 0 16.6569 0 15V6C0 4.34315 1.34315 3 3 3H5.8162C5.84949 2.96194 5.8903 2.91033 5.93702 2.84538ZM16 5V3H18V1H20V3H22V5H20V7H18V5H16ZM11 15C8.23858 15 6 12.7614 6 10C6 7.23858 8.23858 5 11 5C13.7614 5 16 7.23858 16 10C16 12.7614 13.7614 15 11 15ZM11 13C12.6569 13 14 11.6569 14 10C14 8.34315 12.6569 7 11 7C9.34315 7 8 8.34315 8 10C8 11.6569 9.34315 13 11 13Z" fill="#011C1A"/>
+                        </svg>                            
                         <p class="text">Завантажити</p>
                     </div>
                 </div>
@@ -152,7 +154,7 @@
                     Додавайте фотографії, відео, записи голосу. Все, що допоможе зберегти пам'ять про людину
                 </p>
                 <p class="text creation-media__photo-text">Фото</p>
-                <div class="creation-media__photo-wrap">
+                <div class="creation-btn creation-media__photo-wrap">
                     <div class="creation-media__photo-hero">
                         <svg width="22" height="18" viewBox="0 0 22 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M5.93702 2.84538C6.00787 2.74688 6.08656 2.62631 6.18689 2.46372C6.22356 2.40431 6.32355 2.23934 6.39799 2.11653L6.4818 1.97841C7.31079 0.622387 7.91339 0 9 0H14V2H9C8.91327 2 8.6405 2.28172 8.1882 3.02159L8.11542 3.14154L8.11524 3.14183C8.04019 3.26566 7.93096 3.44589 7.88887 3.51409C7.76592 3.71332 7.66375 3.86988 7.56061 4.01326C7.11237 4.63641 6.66434 5 6 5H3C2.44772 5 2 5.44772 2 6V15C2 15.5523 2.44772 16 3 16H19C19.5523 16 20 15.5523 20 15V9H22V15C22 16.6569 20.6569 18 19 18H3C1.34315 18 0 16.6569 0 15V6C0 4.34315 1.34315 3 3 3H5.8162C5.84949 2.96194 5.8903 2.91033 5.93702 2.84538ZM16 5V3H18V1H20V3H22V5H20V7H18V5H16ZM11 15C8.23858 15 6 12.7614 6 10C6 7.23858 8.23858 5 11 5C13.7614 5 16 7.23858 16 10C16 12.7614 13.7614 15 11 15ZM11 13C12.6569 13 14 11.6569 14 10C14 8.34315 12.6569 7 11 7C9.34315 7 8 8.34315 8 10C8 11.6569 9.34315 13 11 13Z" fill="#C69A39"/>
@@ -165,8 +167,15 @@
                 <div class="creation-media__inputs">
                     <input type="text" class="input" placeholder="Посилання на відео">
                     <p class="text">або</p>
-                    <button class="btn creation-media__attachment">
-                        <img src="./assets/icons/attachment.svg">
+                    <button class="btn creation-btn creation-media__attachment">
+                        <svg width="35" height="35" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <mask id="mask0_746_31918" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="5" y="5" width="25" height="24">
+                                <path d="M18.4568 23.8072L10.8572 16.326C9.35598 14.8482 9.11895 12.4511 10.4693 10.8389C12.0137 8.99333 14.8007 8.89433 16.4815 10.549L25.3596 19.2888C26.3006 20.2151 26.4801 21.7212 25.6397 22.7324C24.67 23.8991 22.9246 23.9628 21.8687 22.9233L14.3266 15.4987C13.9315 15.1098 13.9315 14.4734 14.3266 14.0845C14.7216 13.6956 15.3681 13.6956 15.7632 14.0845L22.0483 20.2717C22.3428 20.5616 22.8312 20.5616 23.1257 20.2717C23.4202 19.9818 23.4202 19.5009 23.1257 19.211L16.9412 13.1228C16.0002 12.1965 14.4702 12.0197 13.4431 12.8471C12.2579 13.8017 12.1933 15.5199 13.2491 16.5594L20.6691 23.8638C22.1704 25.3416 24.6054 25.575 26.2431 24.2456C28.125 22.7183 28.2184 19.9818 26.5376 18.3271L17.7241 9.65094C15.6626 7.62154 12.3082 7.2892 10.0599 9.1206C7.48123 11.2349 7.34476 14.9896 9.65767 17.2665L17.3793 24.8679C17.6738 25.1578 18.1623 25.1578 18.4568 24.8679C18.7513 24.578 18.7513 24.0971 18.4568 23.8072Z" fill="black"/>
+                            </mask>
+                            <g mask="url(#mask0_746_31918)">
+                                <rect width="24.1906" height="24.1906" transform="matrix(0.712635 0.701535 -0.712635 0.701535 17.5566 0.294189)" fill="#C69A39"/>
+                            </g>
+                        </svg>
                         Завантажити відео з комп'ютера
                     </button>
                 </div>
@@ -186,9 +195,20 @@
                     <label class="label">Назва посилання</label>
                     <input type="text" class="input" placeholder="Назва посилання">
                 </div>
-                <button class="btn creation-refs__btn">
-                    <img src="./assets/icons/plus.svg" alt="+">  
-                    Додадти ще
+                <button class="btn creation-btn creation-refs__btn">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g id="Content / add">
+                            <mask id="mask0_746_32010" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="5" y="5" width="14" height="14">
+                                <g id="Icon Mask">
+                                    <path id="Round" d="M18 13H13V18C13 18.55 12.55 19 12 19C11.45 19 11 18.55 11 18V13H6C5.45 13 5 12.55 5 12C5 11.45 5.45 11 6 11H11V6C11 5.45 11.45 5 12 5C12.55 5 13 5.45 13 6V11H18C18.55 11 19 11.45 19 12C19 12.55 18.55 13 18 13Z" fill="black"/>
+                                </g>
+                            </mask>
+                            <g mask="url(#mask0_746_32010)">
+                                <rect id="Color Fill" width="24" height="24" fill="#D1AE61"/>
+                            </g>
+                        </g>
+                    </svg>
+                    Додати ще
                 </button>
             </section>
             <!-- Як знайти поховання -->
@@ -245,9 +265,20 @@
                     <label class="label">Ім'я автора</label>
                     <input type="text" class="input" placeholder="Ім'я автора">
                 </div>
-                <button class="btn creation-memories__btn">
-                    <img src="./assets/icons/plus.svg" alt="+">  
-                    Додадти ще
+                <button class="btn creation-btn creation-memories__btn">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g id="Content / add">
+                            <mask id="mask0_746_32010" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="5" y="5" width="14" height="14">
+                                <g id="Icon Mask">
+                                    <path id="Round" d="M18 13H13V18C13 18.55 12.55 19 12 19C11.45 19 11 18.55 11 18V13H6C5.45 13 5 12.55 5 12C5 11.45 5.45 11 6 11H11V6C11 5.45 11.45 5 12 5C12.55 5 13 5.45 13 6V11H18C18.55 11 19 11.45 19 12C19 12.55 18.55 13 18 13Z" fill="black"/>
+                                </g>
+                            </mask>
+                            <g mask="url(#mask0_746_32010)">
+                                <rect id="Color Fill" width="24" height="24" fill="#D1AE61"/>
+                            </g>
+                        </g>
+                    </svg>
+                    Додати ще
                 </button>
             </section>
 
