radio btn edits

--- a/index.html
+++ b/index.html
@@ -69,55 +69,63 @@
                 <div class="creation-template__wrap">
                     <div class="creation-template__item">
                         <div class="creation-template__hero">
-                            <img src="./assets/color-templates/1.svg" alt="template1">
-                            <div class="creation-template__info">
-                                <h4>Бiографiя</h4>
-                                <p class="text">
-                                    В Україні Ігор Сікорський відомий зараз як геніальний авіаційний конструктор, «батько світового гелікоптеробудування». Значно менше знають на Батьківщині про його релігійно-філософську творчість. 
-                                </p>
-                            </div>
+                            <label for="template-radio-1">
+                                <img src="./assets/color-templates/1.svg" alt="template1">
+                                <div class="creation-template__info">
+                                    <h4>Бiографiя</h4>
+                                    <p class="text">
+                                        В Україні Ігор Сікорський відомий зараз як геніальний авіаційний конструктор, «батько світового гелікоптеробудування». Значно менше знають на Батьківщині про його релігійно-філософську творчість. 
+                                    </p>
+                                </div>
+                            </label>
                         </div>
-                        <input checked type="radio" name="template-radio" class="creation-template__radio">
-                        <p class="text creation-template__name">Класичний</p>
+                        <input checked id="template-radio-1" type="radio" name="template-radio" class="creation-template__radio">
+                        <label for="template-radio-1" class="text creation-template__name">Класичний</label>
                     </div>
                     <div class="creation-template__item">
                         <div class="creation-template__hero">
-                            <img src="./assets/color-templates/2.svg" alt="template1">
-                            <div class="creation-template__info">
-                                <h4>Бiографiя</h4>
-                                <p class="text">
-                                    В Україні Ігор Сікорський відомий зараз як геніальний авіаційний конструктор, «батько світового гелікоптеробудування». Значно менше знають на Батьківщині про його релігійно-філософську творчість. 
-                                </p>
-                            </div>
+                            <label for="template-radio-2">
+                                <img src="./assets/color-templates/2.svg" alt="template1">
+                                <div class="creation-template__info">
+                                    <h4>Бiографiя</h4>
+                                    <p class="text">
+                                        В Україні Ігор Сікорський відомий зараз як геніальний авіаційний конструктор, «батько світового гелікоптеробудування». Значно менше знають на Батьківщині про його релігійно-філософську творчість. 
+                                    </p>
+                                </div>
+                            </label>
                         </div>
-                        <input type="radio" name="template-radio" class="creation-template__radio">
-                        <p class="text creation-template__name">Чорний</p>
+                        <input type="radio" id="template-radio-2" name="template-radio" class="creation-template__radio">
+                        <label for="template-radio-2" class="text creation-template__name">Чорний</label>
                     </div>
                     <div class="creation-template__item">
                         <div class="creation-template__hero">
-                            <img src="./assets/color-templates/3.svg" alt="template1">
-                            <div class="creation-template__info">
-                                <h4>Бiографiя</h4>
-                                <p class="text">
-                                    В Україні Ігор Сікорський відомий зараз як геніальний авіаційний конструктор, «батько світового гелікоптеробудування». Значно менше знають на Батьківщині про його релігійно-філософську творчість. 
-                                </p>
-                            </div>
+                            <label for="template-radio-3">
+                                <img src="./assets/color-templates/3.svg" alt="template1">
+                                <div class="creation-template__info">
+                                    <h4>Бiографiя</h4>
+                                    <p class="text">
+                                        В Україні Ігор Сікорський відомий зараз як геніальний авіаційний конструктор, «батько світового гелікоптеробудування». Значно менше знають на Батьківщині про його релігійно-філософську творчість. 
+                                    </p>
+                                </div>
+                            </label>
                         </div>
-                        <input type="radio" name="template-radio" class="creation-template__radio">
-                        <p class="text creation-template__name">Червоний</p>
+                        <input id="template-radio-3" type="radio" name="template-radio" class="creation-template__radio">
+                        <label for="template-radio-3" class="text creation-template__name">Червоний</label>
                     </div>
                     <div class="creation-template__item">
                         <div class="creation-template__hero">
-                            <img src="./assets/color-templates/4.svg" alt="template1">
-                            <div class="creation-template__info">
-                                <h4>Бiографiя</h4>
-                                <p class="text">
-                                    В Україні Ігор Сікорський відомий зараз як геніальний авіаційний конструктор, «батько світового гелікоптеробудування». Значно менше знають на Батьківщині про його релігійно-філософську творчість. 
-                                </p>
-                            </div>
+                            <label for="template-radio-4">
+                                <img src="./assets/color-templates/4.svg" alt="template1">
+                                <div class="creation-template__info">
+                                    <h4>Бiографiя</h4>
+                                    <p class="text">
+                                        В Україні Ігор Сікорський відомий зараз як геніальний авіаційний конструктор, «батько світового гелікоптеробудування». Значно менше знають на Батьківщині про його релігійно-філософську творчість. 
+                                    </p>
+                                </div>
+                            </label>
                         </div>
-                        <input type="radio" name="template-radio" class="creation-template__radio">
-                        <p class="text creation-template__name">Блакитний</p>
+                        <input id="template-radio-4" type="radio" name="template-radio" class="creation-template__radio">
+                        <label for="template-radio-4" class="text creation-template__name">Блакитний</label>
                     </div>
                 </div>
             </section>
