text epitaph edit

--- a/index.html
+++ b/index.html
@@ -129,15 +129,15 @@
                     </div>
                 </div>
             </section>
-            <!-- Єпітафія -->
+            <!-- Епітафія -->
             <section class="creation-page__section creation-epitaph">
-                <h2 class="title creation-page__section-title">Єпітафія</h2>
+                <h2 class="title creation-page__section-title">Епітафія</h2>
                 <p class="text creation-epitaph__text">
                     Епітафія це невеликий поминальний напис. Головні слова, які характеризують людину і нагадують про найсвітліші моменти життя
                 </p>
                 <div class="input__wrapper">
-                    <label class="label">Єпітафія</label>
-                    <textarea cols="30" rows="10" class="input" placeholder="Єпітафія"></textarea>
+                    <label class="label">Епітафія</label>
+                    <textarea cols="30" rows="10" class="input" placeholder="Епітафія"></textarea>
                 </div>
                 <div class="input__wrapper mb-0">
                     <label class="label">Ім'я автора єпітафії</label>
