--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
         <div class="footer__hero">
             <nav class="footer__nav">
                 <img src="./assets/footer-logo.svg" alt="Inheart" class="footer__logo">
+                <img src="./assets/footer-logo-mobile.svg" alt="Inheart" class="footer__logo-mobile">
                 <ul class="footer__menu">
                     <li class="footer__menu-item">
                         <a href="">About</a>
@@ -317,16 +318,33 @@
             </nav>
             <ul class="footer__socials">
                 <li>
-                    <a href=""><img src="./assets/socials/youtube.svg" alt="YT" class="footer__social"></a>
+                    <a href="">
+                        <svg width="23" height="18" viewBox="0 0 23 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M22.464 14.6482C22.2348 15.8516 21.2606 16.7685 20.0572 16.9404C18.1661 17.2269 15.0142 17.5708 11.4612 17.5708C7.96557 17.5708 4.81372 17.2269 2.86531 16.9404C1.66188 16.7685 0.687675 15.8516 0.45845 14.6482C0.229225 13.3301 0 11.3817 0 8.97484C0 6.56798 0.229225 4.61957 0.45845 3.30152C0.687675 2.09809 1.66188 1.18119 2.86531 1.00928C4.75642 0.722744 7.90826 0.378906 11.4612 0.378906C15.0142 0.378906 18.1088 0.722744 20.0572 1.00928C21.2606 1.18119 22.2348 2.09809 22.464 3.30152C22.6933 4.61957 22.9798 6.56798 22.9798 8.97484C22.9225 11.3817 22.6933 13.3301 22.464 14.6482Z" fill="#C3DAE2"/>
+                            <path class="youtube-triangle" d="M9.17188 12.9867V4.96387L16.0486 8.9753L9.17188 12.9867Z" fill="#230208"/>
+                        </svg>   
+                    </a>                         
                 </li>
                 <li>
-                    <a href=""><img src="./assets/socials/in.svg" alt="in" class="footer__social"></a>
+                    <a href="">
+                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M17.0051 0H2.29798C1.02949 0 0 1.02949 0 2.29798V17.0051C0 18.2735 1.02949 19.303 2.29798 19.303H17.0051C18.2735 19.303 19.303 18.2735 19.303 17.0051V2.29798C19.303 1.02949 18.2735 0 17.0051 0ZM5.97475 7.35354V16.0859H3.21717V7.35354H5.97475ZM3.21717 4.81197C3.21717 4.16854 3.76869 3.67677 4.59596 3.67677C5.42323 3.67677 5.94258 4.16854 5.97475 4.81197C5.97475 5.4554 5.46 5.97475 4.59596 5.97475C3.76869 5.97475 3.21717 5.4554 3.21717 4.81197ZM16.0859 16.0859H13.3283C13.3283 16.0859 13.3283 11.83 13.3283 11.4899C13.3283 10.5707 12.8687 9.65151 11.7197 9.63313H11.6829C10.5707 9.63313 10.1111 10.5799 10.1111 11.4899C10.1111 11.9081 10.1111 16.0859 10.1111 16.0859H7.35354V7.35354H10.1111V8.5301C10.1111 8.5301 10.9981 7.35354 12.7814 7.35354C14.606 7.35354 16.0859 8.60823 16.0859 11.1498V16.0859Z" fill="#C3DAE2"/>
+                        </svg>                            
+                    </a>
                 </li>
                 <li>
-                    <a href=""><img src="./assets/socials/twiter.svg" alt="twiter" class="footer__social"></a>
+                    <a href="">
+                        <svg width="24" height="20" viewBox="0 0 24 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M23.0355 2.95856C22.1863 3.33557 21.2761 3.58871 20.3192 3.70361C21.2958 3.11834 22.0462 2.19197 22.3981 1.08966C21.4861 1.63004 20.4718 2.02321 19.3964 2.23506C18.5346 1.31586 17.3067 0.743164 15.9476 0.743164C13.3373 0.743164 11.2206 2.85802 11.2206 5.46838C11.2206 5.83822 11.2637 6.19907 11.3445 6.54556C7.41637 6.34808 3.93529 4.46661 1.6032 1.6067C1.19567 2.30687 0.964075 3.11834 0.964075 3.98367C0.964075 5.62278 1.79709 7.06979 3.06637 7.91896C2.2908 7.89383 1.56191 7.68019 0.924578 7.32652C0.924578 7.34627 0.924578 7.36601 0.924578 7.38576C0.924578 9.67656 2.55471 11.585 4.71445 12.0212C4.31948 12.1289 3.90118 12.1864 3.47031 12.1864C3.16511 12.1864 2.86888 12.1577 2.57984 12.1002C3.18306 13.9763 4.92809 15.3461 6.99448 15.3838C5.37871 16.6513 3.34105 17.4053 1.12565 17.4053C0.743253 17.4053 0.368036 17.3838 0 17.3389C2.08973 18.6818 4.57442 19.4627 7.24402 19.4627C15.9368 19.4627 20.6908 12.2618 20.6908 6.01775C20.6908 5.81308 20.6854 5.60662 20.6782 5.40555C21.601 4.73949 22.4017 3.90648 23.0355 2.95856Z" fill="#C3DAE2"/>
+                        </svg>                            
+                    </a>
                 </li>
                 <li>
-                    <a href=""><img src="./assets/socials/fb.svg" alt="fb" class="footer__social"></a>
+                    <a href="">
+                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M17.0051 0H2.29798C1.02949 0 0 1.02949 0 2.29798V17.0051C0 18.2735 1.02949 19.303 2.29798 19.303H17.0051C18.2735 19.303 19.303 18.2735 19.303 17.0051V2.29798C19.303 1.02949 18.2735 0 17.0051 0ZM15.1667 6.89394H14.2475C13.2639 6.89394 12.8687 7.12374 12.8687 7.81313V9.19192H15.1667L14.7071 11.4899H12.8687V18.3838H10.5707V11.4899H8.73232V9.19192H10.5707V7.81313C10.5707 5.97475 11.4899 4.59596 13.3283 4.59596C14.6611 4.59596 15.1667 5.05556 15.1667 5.05556V6.89394Z" fill="#C3DAE2"/>
+                        </svg>                            
+                    </a>
                 </li>
             </ul>
         </div>
